--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
           cache: npm
 
       - name: Install dependencies
@@ -27,5 +27,5 @@ jobs:
       - name: Run lint
         run: npm run lint
 
-  build:
-    runs-on: ubuntu-latest
+      - name: Build Next.js app
+        run: npm run build
