--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,16 +16,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run format Checkout
-        run: run format:check
+        run: pnpm run format:check
 
       - name: Run lint
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Build Next.js app
-        run: npm run build
+        run: pnpm run build
