change home page

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,6 +3,9 @@ name: Next.js CI/CD
 on:
   pull_request:
     branches: [main]
+  push:
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   ci:
@@ -16,6 +19,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'pnpm'
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
@@ -23,7 +27,7 @@ jobs:
           version: 8
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
       - name: Run Prettier check
         run: pnpm run format:check
@@ -31,22 +35,26 @@ jobs:
       - name: Run ESLint
         run: pnpm run lint
 
-      - name: Build Next.js
+      - name: Build Next.js (CI build check)
         run: pnpm run build
 
   deploy:
     needs: ci
-    if: github.event_name == 'push'
     runs-on: ubuntu-latest
-
+    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install Node.js & pnpm (optional if prebuilt)
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
       - name: Install Vercel CLI
         run: npm install -g vercel
 
-      - name: Pull Vercel env
+      - name: Pull Vercel environment variables
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Build project artifacts
